--- a/src/component/Mainsite.css
+++ b/src/component/Mainsite.css
@@ -1,6 +1,6 @@
 .mainSite {
     padding: 48px;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.479);
 }
 
 .name-main {
